# banderole

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  deny.toml
.cursor/rules/: linting.mdc
.github/workflows/: audit.yml  release.yml  test.yml
scripts/: format.sh
simple-app/: index.js  package.json
src/: bundler.rs  bundler_simple.rs  embedded_template.rs  executable.rs  main.rs  node_downloader.rs  node_version_manager.rs  platform.rs  rust_toolchain.rs
src/template/: build.rs  crg.toml
src/template/src/: main.rs
template/: Cargo.toml  build.rs
template/src/: main.rs
test-app/: index.js  package-lock.json  package.json
tests/: concurrent_execution_integration_test.rs  integration_test.rs  local_link_integration_test.rs  workspace_integration_test.rs  workspace_version_integration_test.rs
tests/common/: mod.rs
