[package]
name = "banderole"
description = "A cross-platform Node.js single-executable bundler"
homepage = "https://github.com/zhom/banderole"
repository = "https://github.com/zhom/banderole"
license = "MIT"
authors = ["zhom <contact@donutbrowser.com>"]
version = "0.2.1"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
zip = "4"
directories = "6"
anyhow = "1.0"
walkdir = "2.4"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.20"
base64 = "0.22"
indicatif = "0.18"
log = "0.4"
env_logger = "0.11"
indicatif-log-bridge = "0.2"
console = "0.16"
flate2 = "1.0"
tar = "0.4"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
serial_test = "3"

[[test]]
name = "integration_test"
harness = true

[[test]]
name = "workspace_integration_test"
harness = true

[[test]]
name = "local_link_integration_test"
harness = true

[[test]]
name = "workspace_version_integration_test"
harness = true

[[test]]
name = "concurrent_execution_integration_test"
harness = true

# Run tests sequentially to avoid resource conflicts
[profile.test]
opt-level = 0
debug = true
